tests/basic/check/not_neg/160.pan
not : (x:bool) -> {y:bool|y = ~x}
assert : { b:ð”¹ | b = true } â†’ ðŸ™

f160 : {b:bool|b=true} -> unit
f160 = \b:bool. let c = not b in assert c

f161 : {b:bool|true} -> unit
f161 = \b:bool. let c = not b in assert c
